# hackaton

./: .gitignore  AGENTS.md  README.md  api_server.py  package-lock.json  package.json  pose_analyzer.py  pyproject.toml  storage.py
app/: globals.css  layout.jsx  page.jsx  reportExport.mjs
app/api/analyze/: route.js
app/api/auth/[action]/: route.js
app/api/billing/[action]/: route.js
app/api/health/: route.js
app/api/reports/: route.js
app/api/reports/[reportId]/: route.js
app/learn/posture/: page.jsx
docs/: pricing.md
public/test_images/: SOURCES.md
tests/: test_api_server.py  test_pose_analyzer.py  test_report_export.py  test_storage.py
